# MLpractice_sukkiri

./: KinokoTakenoko.pkl  boston.pkl  boston_scx.pkl  boston_scy.pkl  cinema.pkl  irismodel.pkl  part0.ipynb  part1.ipynb  part5.ipynb  part5ex.ipynb  part5ex.pkl  part6.ipynb  part6_sample.ipynb  part6ex.ipynb  part7.ipynb  part7ex.ipynb  part8.ipynb  part9.ipynb  pyproject.toml  re-part8.ipynb  re-part9.ipynb  readme.md  survived.pkl  test_getdummies.ipynb
src/mlpractice_sukkiri/: __init__.py
