[project]
name = "mlpractice-sukkiri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
]

[project.scripts]
hello = "mlpractice_sukkiri:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
